--- a/src/App.css
+++ b/src/App.css
@@ -1,88 +1,38 @@
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+*, :after, :before {
+    box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-logo {
+animation: App-logo-spin infinite 20s linear;
+}
 }
 
 .App-header {
-  background-color: #EAF1FE;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+background-color: #EAF1FE;
+min-height: 100vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+font-size: calc(10px + 2vmin);
+color: white;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+from {
+transform: rotate(0deg);
+}
+to {
+transform: rotate(360deg);
+}
 }
 
-.authorization-button {
-  border: none;
-  border-radius: 10px;
-  background-color: white;
-  width: 248px;
-  height: 61px;
-  color: #465FDD;
-
-  display: flex;
-  align-items: center;
-  box-shadow: 0 21px 22px -13px rgba(62, 84, 216, .22);
-  padding: 1rem 1.5rem;
-  justify-content: center;
-  line-height: 1.5;
-}
-
-.authorization-button:hover {
-  /*animation: App-logo-spin 1 .5s linear;*/
-}
-
-.authorization-button-icon {
-  background-color: #3e54d878;
-  width: 15.4px;
-  height: 15.4px;
-  margin-right: .5rem;
-  display: flex;
-  align-items: center;
-}
-
-.authorization-btn-links a {
-  border-bottom: 1px solid transparent;
-  color: #3e54d8;
-  font-size: 18px;
-  text-decoration: none;
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-}
-
-.authorization-btn-links a:hover {
-  border-color: #3e54d8;
-}
-
-.authorization-btn-links a:not(:last-child) {
-  margin-right: 1rem;
-  position: relative;
-}
-
-.authorization-btn-links a:not(:last-child):after {
-  background-color: #3e54d8;
-  content: "";
-  height: 70%;
-  position: absolute;
-  right: -.5rem;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 2px;
-}
