Модалка для регистрации и авторизации. Добавлен Oidc.UserManager, но не используется

--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,24 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .App {
-text-align: center;
+    min-height: 100vh;
+    background-color: #EAF1FE;
+    text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-.App-logo {
-animation: App-logo-spin infinite 20s linear;
-}
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
-.App-header {
-background-color: #EAF1FE;
-min-height: 100vh;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-font-size: calc(10px + 2vmin);
-color: white;
+.section-header {
+    display: flex;
+    flex-direction: column;
+    align-items: self-end;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 @keyframes App-logo-spin {
