--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -24,7 +24,7 @@
     border: 1px solid #d3e3ff;
     border-radius: 1.1rem;
     box-shadow: 0 44px 89px -17px rgba(62, 84, 216, .6);
-    padding: 2.5rem 4.44rem;
+    padding: 1.5rem 4.3rem;
     width: 45rem;
 
     left: 50%;
@@ -38,93 +38,20 @@
       z-index: 21;
 
       &-header {
+        font-size: 2em;
         position: relative;
         color: #3e54d8;
         line-height: 1.3;
-        margin-bottom: 2.7rem;
         text-align: center;
       }
 
       &-content {
-        font-size: 22px;
-
-        &-group {
-          &:not(:first-child) {
-            margin-top: 1.1rem;
-          }
-
-          &-label {
-            align-items: center;
-            display: flex;
-            margin-bottom: .5rem;
-
-            & h4 {
-              color: #24252e;
-              font-weight: 500;
-              margin-right: .7rem;
-            }
-
-            span {
-              color: #929398;
-              font-size: .8em;
-            }
-          }
-
-          .input_text {
-            background-color: #fcfdff;
-            border: 1px solid #d3e3ff;
-            border-radius: .5rem;
-            outline: none;
-            padding: .8rem 1.3rem;
-            transition: .3s ease-in-out;
-            width: 100%;
-            font-size: inherit;
-          }
-
-          &-message {
-            display: none;
-            margin-top: .5rem;
-          }
-
-          &-error {
-            display: none;
-          }
-        }
-
-        &.error {
-          .modal-content {
-            &-group {
-              &-error {
-                display: block;
-                color: #ed6373;
-              }
-            }
-
-            &-group.error {
-              .modal-content-group {
-                &-input .input_text {
-                  border-color: #ed6373;
-                }
-
-                &-message {
-                  display: block;
-                  text-align: start;
-
-                  & span {
-                    color: #ed6373;
-                    font-size: .8em;
-                  }
-                }
-              }
-            }
-          }
-        }
+        font-size: 18px;
 
         &-btn {
-          display: -webkit-box;
-          display: -ms-flexbox;
           display: flex;
           margin-top: 1.8rem;
+          margin-bottom: 1rem;
 
           .btn {
             font-size: 1em;
@@ -150,7 +77,7 @@
         &-link {
           font-size: .9em;
           font-weight: 500;
-          margin-top: 1.8rem;
+          margin-top: 1.5rem;
           text-align: center;
 
           strong {
