--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,17 @@ h1, h2, h3, h4, h5, h6, p {
 
 .section-header {
     display: flex;
-    flex-direction: column;
-    align-items: self-end;
-    justify-content: center;
+    flex-direction: row;
     font-size: calc(10px + 2vmin);
     color: white;
+    align-items: baseline;
+    justify-content: flex-end;
+}
+
+.section-header .item {
+    margin-right: 1em;
+    text-decoration: none;
+    color: #000;
 }
 
 @keyframes App-logo-spin {
