--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -84,6 +84,7 @@
             color: #3e54d8;
             cursor: pointer;
             font-weight: 600;
+            margin-left: .5em;
           }
         }
       }
