--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -3,7 +3,12 @@
   background-color: cornflowerblue;
   border-radius: 20px;
 
+  min-height: 75vh;
   text-align: center;
   font-size: 1.5em;
   padding: .5em;
+
+  .input {
+    font-size: 20px;
+  }
 }
