--- a/src/components/Courses/CoursesCard/CoursesCard.scss
+++ b/src/components/Courses/CoursesCard/CoursesCard.scss
@@ -55,22 +55,14 @@
   &-btn {
     margin-top: auto;
 
-    button {
+    .btn {
       box-shadow: 0px 21px 22px -13px rgba(62, 84, 216, .51);
       background-color: #3E54D8;
-      color: #fff;
-      border-color: #3E54D8;
-      border-radius: 0.5rem;
-      cursor: pointer;
       font-size: 1rem;
-
-      border: 1px solid transparent;
-      font-weight: 600;
       padding: 1.5rem 3rem;
-      transition: .3s ease-in-out;
     }
 
-    button:hover {
+    .btn:hover {
       background-color: #6a7ad8;
       transform: scale(.95);
     }
