--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,11 @@ body {
 }
 
 .menu {
+  background-color: #6495ed0d;
+  border-bottom: 8px solid #6495ed4f;
   display: flex;
+  padding: 0.2em 2em;
+  border-radius: 2em;
 
   &-item {
     font-size: .95em;
@@ -68,6 +72,11 @@ body {
     transition: .3s ease-in-out;
     text-decoration: none;
     color: #373943;
+  }
+
+  &-item:hover {
+    color: #000;
+    transform: scale(1.1);
   }
 
   &-item a:before {
