--- a/src/App.scss
+++ b/src/App.scss
@@ -12,100 +12,18 @@ ul {
   padding: 0;
 }
 
-body {
-  background-color: #EAF1FE;
-}
-
 .App {
   min-height: 100vh;
   background-color: #EAF1FE;
   text-align: center;
 }
 
-.section-header {
+.section-outer {
   display: flex;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  height: 7rem;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-
-  &-logo {
-    width: 247px;
-    height: 60px;
-
-    svg {
-      color: #465fdd;
-      height: 100%;
-      width: 100%;
-    }
-  }
-
-  &-controls, &-operation {
-    align-items: center;
-    display: flex;
-  }
-}
-
-.menu {
-  display: flex;
-
-  &-item {
-    background-color: #6495ed0d;
-    border-bottom: 8px solid #6495ed4f;
-    padding: 0.2em 2em;
-    border-radius: 2em;
-
-    font-size: .95em;
-  }
-
-  &-item:not(:last-child) {
-    margin-right: 1.2rem;
-  }
-
-  &-item a {
-    position: relative;
-    transition: .3s ease-in-out;
-    text-decoration: none;
-    color: #373943;
-  }
-
-  &-item:hover {
-    color: #000;
-    transform: scale(1.1);
-  }
-
-  &-item a:before {
-    background-color: #4aed4e;
-    bottom: 0.1rem;
-    content: "";
-    height: 0.25rem;
-    left: 50%;
-    opacity: 0;
-    position: absolute;
-    transform: translateX(-50%);
-    transition: .3s ease-in-out;
-    width: 110%;
-  }
-
-  &-item.active a:before {
-    opacity: .99;
-  }
 }
 
 .section-inner {
   max-width: 90%;
-}
-
-.body-content {
-  height: 100vh;
-  max-width: 1420px;
-  margin: 0 auto;
 }
 
 .input {
@@ -128,6 +46,13 @@ body {
   transition: 0.3s ease-in-out;
 }
 
-.section-outer {
-  display: flex;
+.btn.green {
+  background-color: #54ad54;
 }
+
+.btn.green:active,
+.btn.green:hover {
+  background-color: #246024;
+}
+
+
