--- a/src/components/Courses/Courses.scss
+++ b/src/components/Courses/Courses.scss
@@ -1,15 +1,11 @@
 .courses {
   height: 100%;
+  padding: 0 2em;
 
   &-content {
     grid-gap: 1.5rem;
-    grid-template-columns: 1fr 4fr;
     padding-bottom: 4rem;
     display: grid;
-  }
-
-  &-content.one-column {
-    grid-template-columns: 1fr;
   }
 
   &-header {
@@ -41,12 +37,5 @@
     .btn:active {
       background-color: #246024;
     }
-  }
-
-  &-cards {
-    grid-gap: 1.5rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-bottom: 4rem;
   }
 }
