--- a/src/components/Courses/CoursesCard/CoursesCard.scss
+++ b/src/components/Courses/CoursesCard/CoursesCard.scss
@@ -1,7 +1,6 @@
 .card {
   text-decoration: none;
   background-color: #fff;
-  border: 1px solid #d3e3ff;
   border-radius: 0.9rem;
   cursor: pointer;
   display: flex;
@@ -12,60 +11,15 @@
   transition: .3s ease-in-out;
   text-align: start;
   max-height: 500px;
+  box-shadow: 1px 2px 12px 0 rgb(94, 94, 94, .12);
 
   &:hover {
-    box-shadow: 0 18px 16px -13px rgba(62, 84, 216, .22);
+    box-shadow: 1px 2px 12px 0 rgb(156, 166, 230, .60);
     transform: translateY(-0.5rem);
 
     &:before {
+      background-color: #4cc319;
       transform: translate(50%,-50%) scale(1.3);
-    }
-  }
-
-  &-header h3 {
-    color: #3e54d8;
-    font-size: 1.77rem;
-    margin-right: 0.3rem;
-
-    -webkit-line-clamp: 2;
-  }
-
-  &-stats {
-    display: flex;
-    align-items: center;
-    margin-bottom: .7rem;
-  }
-
-  &-text {
-    margin: 2.2rem 0;
-    color: #24252e;
-    font-size: .9rem;
-    line-height: 1.6;
-
-    p {
-      -webkit-line-clamp: 7;
-    }
-  }
-
-  &-text p, &-header h3 {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
-
-  &-btn {
-    margin-top: auto;
-
-    .btn {
-      box-shadow: 0px 21px 22px -13px rgba(62, 84, 216, .51);
-      background-color: #3E54D8;
-      font-size: 1rem;
-      padding: 1.5rem 3rem;
-    }
-
-    .btn:hover {
-      background-color: #6a7ad8;
-      transform: scale(.95);
     }
   }
 
@@ -81,12 +35,16 @@
     width: 8rem;
   }
 
-  &.blue:before {
-    background-color: #3e54d8;
+  &.green:before {
+    background-color: #54ad54;
   }
 
-  &.green:before {
-    background-color: #199f27;
+  &.green:hover:before {
+    background-color: #4cc319;
+  }
+
+  &.blue:before {
+    background-color: #3e54d8;
   }
 
   &.red:before {
