--- a/src/components/Courses/CoursesCard/CardText/CardText.scss
+++ b/src/components/Courses/CoursesCard/CardText/CardText.scss
@@ -1,6 +1,8 @@
+@import "../../../../StyleConstants";
+
 .card-text {
   margin: 2.2rem 0;
-  color: #24252e;
+  color: $black-grey-color;
   font-size: .9rem;
   line-height: 1.6;
 
