--- a/src/components/Courses/CoursesCard/CardTitle/CardTitle.scss
+++ b/src/components/Courses/CoursesCard/CardTitle/CardTitle.scss
@@ -1,5 +1,7 @@
+@import "../../../../StyleConstants";
+
 .card-title h3 {
-  color: #222;
+  color: $black-grey-color;
   font-size: 1.77rem;
   margin-right: 0.3rem;
 
