--- a/src/components/Course/Course.scss
+++ b/src/components/Course/Course.scss
@@ -1,3 +1,5 @@
+@import "../../StyleConstants";
+
 .course {
   display: flex;
   flex-direction: column;
@@ -7,7 +9,7 @@
     position: relative;
     width: 100%;
     margin-top: 1em;
-    color: #3e54d8;
+    color: $blue-color;
     font-weight: 500;
     display: flex;
     align-items: baseline;
@@ -29,7 +31,7 @@
   }
 
   &-description .section{
-    background-color: #fff;
+    background-color: $white;
     font-size: 1.3em;
     margin-top: 1em;
     padding: 2em;
