--- a/src/components/Courses/CoursesCard/CardBtn/CardBtn.scss
+++ b/src/components/Courses/CoursesCard/CardBtn/CardBtn.scss
@@ -1,14 +1,15 @@
+@import "../../../../StyleConstants";
+
 .card-btn {
   margin-top: auto;
 
-  .green {
-    box-shadow: 0px 21px 22px -13px rgba(62, 84, 216, .51);
+  .btn {
+    box-shadow: 0px 21px 22px -13px $box-shadow-blue-dark;
     font-size: 1rem;
     padding: 1.5rem 3rem;
   }
 
-  .green:hover {
-    background-color: #4cc319;
+  .btn:hover {
     transform: scale(.95);
   }
 }
