--- a/src/components/Modal/ModalContentGroup/ModalContentGroup.scss
+++ b/src/components/Modal/ModalContentGroup/ModalContentGroup.scss
@@ -1,3 +1,5 @@
+@import "../../../StyleConstants";
+
 .modal-content {
   &-group {
     &:not(:first-child) {
@@ -10,13 +12,13 @@
       margin-bottom: .1rem;
 
       & h4 {
-        color: #24252e;
+        color: $black-grey-color;
         font-weight: 500;
         margin-right: .7rem;
       }
 
       span {
-        color: #929398;
+        color: $grey-color-light;
         font-size: .8em;
       }
     }
@@ -36,14 +38,14 @@
       &-group {
         &-error {
           display: block;
-          color: #ed6373;
+          color: $red-color;
         }
       }
 
       &-group.error {
         .modal-content-group {
           &-input .input {
-            border-color: #ed6373;
+            border-color: $red-color;
           }
 
           &-message {
@@ -51,7 +53,7 @@
             text-align: start;
 
             & span {
-              color: #ed6373;
+              color: $red-color;
               font-size: .8em;
             }
           }
