--- a/src/StyleConstants.scss
+++ b/src/StyleConstants.scss
@@ -19,6 +19,7 @@ $auth-btn-underline-links: #737373;
 
 $white: #fff;
 $black: #000;
+$light-black: #222;
 $app-bgc-color: #eaf1fe;
 
 $box-shadow-grey-dark: rgba(62, 84, 216, .22);
