--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,4 +4,27 @@
   background: url("bkg/1.jpg");
   background-size: cover;
   height: 100%;
+
+  &-title {
+    justify-content: flex-start;
+    align-items: center;
+    max-width: 1768px;
+    margin: 0 auto;
+    padding: 0 40px;
+    height: calc(100vh - 6rem);
+    width: 100%;
+    display: flex;
+    text-transform: uppercase;
+
+    .title {
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 73px;
+      flex-direction: column;
+      align-items: flex-start;
+      text-align: left;
+      width: 60%;
+      color: $white;
+    }
+  }
 }
