Наброски страницы профиля пользователя

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,8 +30,13 @@ ul {
 }
 
 .page-fragment {
+  height: 100%;
   width: 100%;
   margin: 0 auto;
+}
+
+.page-fragment.limited {
+  max-width: 1200px;
 }
 
 .input {
