--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,7 @@
 @import "../../StyleConstants";
 
 .home-page {
-  background: url("bkg/1.jpg");
+  background: url("../../imgs/1.jpg");
   background-size: cover;
   height: 100%;
 
