refactoring + CreateCoursePage(lessons+modules names)

--- a/src/components/Buttons/AuthorizationButton/AuthorizationButton.scss
+++ b/src/components/Buttons/AuthorizationButton/AuthorizationButton.scss
@@ -4,14 +4,12 @@
   border: none;
   border-radius: 10px;
   background-color: white;
-  width: 260px;
-  height: 61px;
   color: $black;
 
   display: flex;
   align-items: center;
   box-shadow: 0 21px 22px -13px $box-shadow-grey-dark;
-  padding: 1rem 1.5rem;
+  padding: .5rem 1.5rem;
   justify-content: center;
   line-height: 1.5;
 
@@ -30,7 +28,7 @@
     border-bottom: 1px solid transparent;
     color: $black;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 15px;
     text-decoration: none;
     transition: .3s ease-in-out;
 
