--- a/src/components/Courses/CoursesCard/CardTitle/CardTitle.scss
+++ b/src/components/Courses/CoursesCard/CardTitle/CardTitle.scss
@@ -2,7 +2,7 @@
 
 .card-title h3 {
   color: $black-grey-color;
-  font-size: 1.77rem;
+  font-size: 20px;
   margin-right: 0.3rem;
 
   -webkit-line-clamp: 2;
