--- a/src/components/Courses/CoursesCard/CardBtn/CardBtn.scss
+++ b/src/components/Courses/CoursesCard/CardBtn/CardBtn.scss
@@ -5,7 +5,7 @@
 
   .btn {
     box-shadow: 0px 21px 22px -13px $box-shadow-blue-dark;
-    font-size: 1rem;
+    font-size: 14px;
     padding: 1.5rem 3rem;
   }
 
