--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
   background-color: $black-grey-color;
   font-size: calc(10px + 2vmin);
   justify-content: center;
-  height: 5rem;
+  height: 50px;
 
   .header {
     display: flex;
@@ -32,7 +32,7 @@
       display: flex;
 
       &-item {
-        font-size: .95em;
+        font-size: 20px;
       }
 
       &-item:not(:last-child) {
@@ -59,7 +59,7 @@
         background-color: $blue-color;
         bottom: 0.1rem;
         content: "";
-        height: 0.25rem;
+        height: 1.5px;
         left: 50%;
         opacity: 0;
         position: absolute;
