--- a/src/components/Buttons/PersonalAccountButton/PersonalAccountButton.scss
+++ b/src/components/Buttons/PersonalAccountButton/PersonalAccountButton.scss
@@ -1,6 +1,7 @@
 @import "../../../StyleConstants";
 
 .personal-account-btn {
+  margin-left: 1em;
   padding: 0.5rem 1.5rem;
   font-size: 14px;
   font-weight: 500;
