--- a/src/components/Buttons/LogoutButton/LogoutButton.scss
+++ b/src/components/Buttons/LogoutButton/LogoutButton.scss
@@ -1,6 +1,6 @@
 @import "../../../StyleConstants";
 
-.personal-account-btn {
+.logout-btn {
   margin-left: 1em;
   padding: 0.5rem 1.5rem;
   font-size: 14px;
