--- a/src/App.scss
+++ b/src/App.scss
@@ -52,12 +52,13 @@ ul {
 }
 
 .btn {
-  color: $white;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  border: 1px solid transparent;
-  font-weight: 600;
-  transition: 0.3s ease-in-out;
+  text-transform: inherit !important;
+  //color: $white;
+  //border-radius: 0.5rem;
+  //cursor: pointer;
+  //border: 1px solid transparent;
+  //font-weight: 600;
+  //transition: 0.3s ease-in-out;
 }
 
 .btn.green {
