--- a/src/components/CreateCoursePage/NewCourseModule/NewCourseModule.scss
+++ b/src/components/CreateCoursePage/NewCourseModule/NewCourseModule.scss
@@ -26,10 +26,17 @@
       color: red;
     }
 
-    .redact-btn {
+    .accept-btn {
       height: 2em;
       width: 1.3em;
       color: limegreen;
+      margin-right: 10px;
+    }
+
+    .redact-btn {
+      height: 2em;
+      width: 1.3em;
+      color: #ffc107;
       margin-right: 10px;
     }
   }
