--- a/src/components/CreateCoursePage/Lesson/Lesson.scss
+++ b/src/components/CreateCoursePage/Lesson/Lesson.scss
@@ -1,4 +1,24 @@
-.alert-primary {
+.lesson-name {
   width: 95%;
   margin-left: auto;
+  align-items: center;
+  display: flex;
+
+  input {
+    background: transparent;
+    border: none;
+
+    &.redact {
+      border-bottom: 1px solid black;
+    }
+
+    &:focus-visible {
+      outline: none;
+      box-shadow: none;
+    }
+  }
+}
+
+.lesson-redact-btn {
+  height: 1em !important;
 }
