--- a/src/components/TextEditor/TextEditor.scss
+++ b/src/components/TextEditor/TextEditor.scss
@@ -2,19 +2,29 @@
 
 .text-editor {
   min-height: 300px;
-  text-align: center;
-  border: 1px solid #d3e3ff;
-  border-radius: 0.25rem;
+
+  &-header {
+    line-height: 2em;
+    position: relative;
+    margin: 0 auto;
+    background: #d3e3ff;
+    padding: 0.5em 1em;
+    max-width: 62.25em;
+    overflow: hidden;
+    border-radius: 0.25rem 0.25rem 0 0;
+  }
 }
 
-.form-control:focus {
-  color: #212529;
-  background-color: #fff;
-  border-color: #86b7fe;
-  outline: 0;
-  box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+.public-DraftEditor-content {
+  min-height: 200px;
 }
 
 .rdw-editor-main {
   min-height: 160px;
+  overflow: visible;
+}
+
+.rdw-editor-toolbar {
+  border: 1px solid #d3e3ff;
+  border-radius: 0 0 0.25rem 0.25rem;
 }
