create course in courseProgram

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -28,3 +28,5 @@ $box-shadow-grey-light: rgb(94, 94, 94, .12);
 $box-shadow-dark-blue: rgba(62, 84, 216, .6);
 $box-shadow-blue-dark: rgba(62, 84, 216, .51);
 $box-shadow-blue-light: rgb(156, 166, 230, .60);
+
+$error-color: #b12e2e;
