--- a/src/components/Buttons/LogoutButton/LogoutButton.scss
+++ b/src/components/Buttons/LogoutButton/LogoutButton.scss
@@ -1,7 +1,6 @@
 @import "../../../variables";
 
 .logout-btn {
-  margin-left: 1em;
-  padding: 0.5rem 1.5rem;
-  font-size: 14px;
+  margin-left: 1em !important;
+  font-size: 14px !important;
 }
