--- a/src/components/CourseProgram/CourseProgram.scss
+++ b/src/components/CourseProgram/CourseProgram.scss
@@ -49,10 +49,12 @@
 }
 
 .course-program {
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   display: flex;
 
   &-content {
+    height: fit-content;
     width: 100%;
     padding: 1em 3em;
   }
