--- a/src/components/Courses/CoursesCards/CoursesCards.scss
+++ b/src/components/Courses/CoursesCards/CoursesCards.scss
@@ -3,6 +3,40 @@
 .courses-cards {
   grid-gap: 1.5rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   padding-bottom: 4rem;
+}
+
+.card {
+  &-image {
+    height: 200px;
+    overflow: hidden;
+  }
+
+  p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+
+  &:hover {
+    box-shadow: 1px 2px 12px 0 $box-shadow-blue-light;
+    transform: translateY(-0.5rem);
+  }
+
+  &-body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-content {
+    height: 100%;
+  }
+
+  &-text {
+    margin-bottom: 1rem !important;
+  }
+
+  .course-sign-up-btn {
+    width: fit-content;
+  }
 }
