Прохождение курса: модуль и часть задания

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,6 +8,7 @@ $blue-color-dark: #075190;
 
 $red-color: #ed6373;
 $yellow-color: #f3b63f;
+$yellow-light-color: yellow;
 
 $grey-color-light: #929398;
 $grey-color-dark: #6a6a6a;
@@ -30,3 +31,5 @@ $box-shadow-blue-dark: rgba(62, 84, 216, .51);
 $box-shadow-blue-light: rgb(156, 166, 230, .60);
 
 $error-color: #b12e2e;
+
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
