--- a/src/components/CourseCompletion/CourseCompletion.scss
+++ b/src/components/CourseCompletion/CourseCompletion.scss
@@ -18,3 +18,11 @@
 .description {
   white-space: break-spaces;
 }
+
+.answer {
+  margin-top: 3em;
+}
+
+.send-answer-btn {
+  margin-top: 1em !important;
+}
