--- a/src/components/CourseCompletion/Module/Module.scss
+++ b/src/components/CourseCompletion/Module/Module.scss
@@ -2,5 +2,7 @@
 
 .module {
   //font-family: 'Comfortaa', cursive;
-  height: 100%;
+  height: -webkit-fill-available;
+  max-width: 900px;
+  margin: 0 auto;
 }
