--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 @import "../../variables";
 
 .section-header {
+  display: flex;
   background-color: $black-grey-color;
   justify-content: center;
   height: 50px;
