--- a/src/components/CourseCompletion/CourseCompletion.scss
+++ b/src/components/CourseCompletion/CourseCompletion.scss
@@ -9,9 +9,8 @@
 }
 
 .name {
-  text-align: center;
   position: relative;
-  font-size: 20px;
+  font-size: 32px !important;
   margin: 60px 0;
 }
 
