--- a/src/components/Courses/CoursesCards/CoursesCards.scss
+++ b/src/components/Courses/CoursesCards/CoursesCards.scss
@@ -5,6 +5,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   padding-bottom: 4rem;
+
+  &.empty {
+    text-align: center;
+    grid-template-columns: 1fr
+  }
 }
 
 .card {
