--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -12,6 +12,10 @@
       margin-bottom: 1em;
       padding: 8px 35px !important;
     }
+
+    a {
+      color: #dfdfdf !important;
+    }
   }
 
   &_avatar {
@@ -54,6 +58,7 @@
         min-width: 200px;
         flex-shrink: 3;
         border-radius: 0.4em;
+        max-width: 310px;
       }
 
       .course-sign-out-btn {
